--- a/mimall3/package.json
+++ b/mimall3/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
       "serve": "vue-cli-service serve --mode=development",
-      "build": "vue-cli-service build  --mode=production"
+      "build": "vue-cli-service build  --mode=production",
+      "test1": "vue-cli-service serve  --mode=test1"
   },
   "dependencies": {
     "axios": "^0.21.1",
