--- a/mimall3/package.json
+++ b/mimall3/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-      "serve": "vue-cli-service serve --mode=development",
-      "build": "vue-cli-service build  --mode=production",
-      "test1": "vue-cli-service serve  --mode=test1"
+    "serve": "vue-cli-service serve --mode=development",
+    "build": "vue-cli-service build  --mode=production",
+    "test1": "vue-cli-service serve  --mode=test1"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
