--- a/mimall3/package.json
+++ b/mimall3/package.json
@@ -10,7 +10,12 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "element-ui": "^2.13.2",
+    "qrcode": "^1.4.4",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-cookie": "^1.1.4",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -20,6 +25,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "babel-plugin-component": "^1.1.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
